changes to CSS fixig spacing issues

--- a/css/results-page.css
+++ b/css/results-page.css
@@ -517,6 +517,7 @@ p.show5locations:nth-child(n+7) {
     height: 0;
     padding: 0;
     transition: 0.5s ease-out;
+	display: none;
 }  
 
 p.show5locations2:nth-child(n+7) {
@@ -524,5 +525,6 @@ p.show5locations2:nth-child(n+7) {
     height: auto;
   /*  padding: 18px 0 4px 0;*/
     transition: 0.5s ease-out;
+	display: block;
 }  
 
